// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/DataExport/Create/UpdateInfoDrawer should match snapshot 1`] = `
<body>
  <div />
  <div />
  <div />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 735px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-body"
              style="padding: 0px;"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <form
                    class="ant-form ant-form-horizontal css-5ghslo"
                  >
                    <div
                      class="css-4t8s6h"
                    >
                      工单基本信息
                    </div>
                    <div
                      class="ant-form-item css-15d6abf ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class="ant-form-item-required"
                            for="workflow_subject"
                            title=""
                          />
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input ant-input-status-success basic-input-wrapper workflow-name-input-wrapper css-opeiev"
                                id="workflow_subject"
                                placeholder="请输入数据导出工单名称"
                                type="text"
                                value="test"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center base-info-form-item-slot"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-d31ub5"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 18 18"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                              fill="#EBAD1C"
                            />
                          </svg>
                          <span>
                            default
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-d31ub5"
                        >
                          <svg
                            color="#6094FC"
                            fill="none"
                            height="12"
                            viewBox="0 0 24 24"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              fill="currentColor"
                              r="11"
                            />
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                              stroke="#fff"
                              stroke-width="2"
                            />
                            <path
                              d="M12 7.5V12h3.5"
                              stroke="#fff"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                          <span>
                            2024-01-31
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-d31ub5"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 12 12"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="#15C7D4"
                            >
                              <path
                                d="M4.457 4.684a2.182 2.182 0 1 1 3.087-3.086 2.182 2.182 0 0 1-3.087 3.086M10.584 9.47a3.49 3.49 0 0 0-3.492-3.492H4.909A3.49 3.49 0 0 0 1.417 9.47v.218a.873.873 0 0 0 .873.874h7.42a.873.873 0 0 0 .874-.874z"
                              />
                            </g>
                          </svg>
                          <span>
                            admin
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-form-item workflow-base-info-desc-form-item css-1jlm9cy ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class=""
                            for="desc"
                            title="工单描述"
                          >
                            工单描述
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <span
                                class="ant-input-affix-wrapper basic-input-wrapper css-1pd1cd5 ant-input-textarea-affix-wrapper ant-input-textarea-show-count ant-input-affix-wrapper-status-success ant-input-show-count"
                                data-count="4 / 3000"
                              >
                                <textarea
                                  class="ant-input ant-input-status-success"
                                  id="desc"
                                  placeholder="点击添加数据导出描述"
                                  style="overflow-y: hidden; resize: none;"
                                >
                                  desc
                                </textarea>
                                <span
                                  class="ant-input-suffix"
                                >
                                  <span
                                    class="ant-input-data-count"
                                  >
                                    4 / 3000
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin-top: 12px;"
                  />
                  <form
                    class="ant-form ant-form-horizontal clearPaddingBottom css-1k7srz7"
                  >
                    <div
                      class="css-4t8s6h"
                    >
                      工单导出对象
                    </div>
                    <div
                      class="ant-form-item has-required-style css-1jlm9cy ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="dbService"
                            title=""
                          >
                            <div
                              class="label-cont-custom"
                            >
                              <span
                                class="custom-icon-ellipse css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <rect
                                    fill="#E8F3FF"
                                    height="16"
                                    rx="3"
                                    width="16"
                                  />
                                  <circle
                                    cx="8"
                                    cy="8"
                                    fill="#fff"
                                    r="3"
                                    stroke="#4583FF"
                                    stroke-width="2"
                                  />
                                </svg>
                              </span>
                              <span>
                                数据源
                              </span>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                aria-required="true"
                                class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="dbService_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="dbService_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="dbService_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="dbService"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-item"
                                    title="121"
                                  >
                                    121
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item has-required-style css-1jlm9cy"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="schema"
                            title=""
                          >
                            <div
                              class="label-cont-custom"
                            >
                              <span
                                class="custom-icon-ellipse css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <rect
                                    fill="#E8F3FF"
                                    height="16"
                                    rx="3"
                                    width="16"
                                  />
                                  <circle
                                    cx="8"
                                    cy="8"
                                    fill="#fff"
                                    r="3"
                                    stroke="#4583FF"
                                    stroke-width="2"
                                  />
                                </svg>
                              </span>
                              <span>
                                数据库
                              </span>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                aria-required="true"
                                class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="schema_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="schema_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="schema_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="schema"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-placeholder"
                                  >
                                    请选择数据库
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin-top: 0px;"
                  />
                  <form
                    class="ant-form ant-form-horizontal clearPaddingBottom css-18wzzee"
                  >
                    <div
                      class="css-4t8s6h"
                    >
                      导出方式
                    </div>
                    <div
                      class="ant-form-item css-15d6abf"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-no-colon"
                            for="exportMethod"
                            title=""
                          />
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-row actiontech-mode-switcher"
                                id="exportMethod"
                              >
                                <div
                                  class="ant-col ant-col-8"
                                >
                                  <div
                                    class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                                  >
                                    <span
                                      class="actiontech-mode-switcher-item-icon"
                                    >
                                      <svg
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      class="actiontech-mode-switcher-item-text"
                                    >
                                      输入SQL语句
                                    </span>
                                    <div
                                      class="active-icon-wrapper"
                                    >
                                      <span
                                        class="icon-mode-switcher-checked active-icon"
                                      >
                                        <svg
                                          fill="none"
                                          height="14"
                                          viewBox="0 0 14 14"
                                          width="14"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <g
                                            id="Frame"
                                          >
                                            <path
                                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                              id="Vector"
                                              stroke="#FCFBF9"
                                              stroke-linejoin="round"
                                              stroke-width="1.5"
                                            />
                                          </g>
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-15d6abf ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="sql"
                            title=""
                          />
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="custom-monaco-editor-wrapper css-1esok7i"
                              >
                                <input
                                  aria-required="true"
                                  class="custom-monaco-editor"
                                  height="400px"
                                  id="sql"
                                  language="sql"
                                  options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                                  value="select 1;"
                                  width="100%"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                  <div
                    class="css-zz3vgd"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-primary basic-button-wrapper css-1uxy5k6"
                          type="button"
                        >
                          <span>
                            审 核
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default basic-button-wrapper css-1uxy5k6"
                          type="button"
                        >
                          <span>
                            SQL美化
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <svg
                              color="#8A8F99"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                                fill="currentColor"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
</body>
`;

exports[`test base/DataExport/Create/UpdateInfoDrawer should match snapshot when auditLoading is equal true 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div />
  <div />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 735px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-body"
              style="padding: 0px;"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div>
                  <div
                    aria-busy="true"
                    aria-live="polite"
                    class="ant-spin ant-spin-spinning"
                  >
                    <span
                      class="ant-spin-dot ant-spin-dot-spin"
                    >
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="ant-spin-container ant-spin-blur"
                >
                  <form
                    class="ant-form ant-form-horizontal css-5ghslo"
                  >
                    <div
                      class="css-4t8s6h"
                    >
                      工单基本信息
                    </div>
                    <div
                      class="ant-form-item css-15d6abf ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class="ant-form-item-required"
                            for="workflow_subject"
                            title=""
                          />
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                aria-required="true"
                                class="ant-input ant-input-status-success basic-input-wrapper workflow-name-input-wrapper css-opeiev"
                                id="workflow_subject"
                                placeholder="请输入数据导出工单名称"
                                type="text"
                                value="test"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center base-info-form-item-slot"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-d31ub5"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 18 18"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                              fill="#EBAD1C"
                            />
                          </svg>
                          <span>
                            default
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-d31ub5"
                        >
                          <svg
                            color="#6094FC"
                            fill="none"
                            height="12"
                            viewBox="0 0 24 24"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              fill="currentColor"
                              r="11"
                            />
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                              stroke="#fff"
                              stroke-width="2"
                            />
                            <path
                              d="M12 7.5V12h3.5"
                              stroke="#fff"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            />
                          </svg>
                          <span>
                            2024-01-31
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-d31ub5"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 12 12"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="#15C7D4"
                            >
                              <path
                                d="M4.457 4.684a2.182 2.182 0 1 1 3.087-3.086 2.182 2.182 0 0 1-3.087 3.086M10.584 9.47a3.49 3.49 0 0 0-3.492-3.492H4.909A3.49 3.49 0 0 0 1.417 9.47v.218a.873.873 0 0 0 .873.874h7.42a.873.873 0 0 0 .874-.874z"
                              />
                            </g>
                          </svg>
                          <span>
                            admin
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-form-item workflow-base-info-desc-form-item css-1jlm9cy ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class=""
                            for="desc"
                            title="工单描述"
                          >
                            工单描述
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <span
                                class="ant-input-affix-wrapper basic-input-wrapper css-1pd1cd5 ant-input-textarea-affix-wrapper ant-input-textarea-show-count ant-input-affix-wrapper-status-success ant-input-show-count"
                                data-count="4 / 3000"
                              >
                                <textarea
                                  class="ant-input ant-input-status-success"
                                  id="desc"
                                  placeholder="点击添加数据导出描述"
                                  style="overflow-y: hidden; resize: none;"
                                >
                                  desc
                                </textarea>
                                <span
                                  class="ant-input-suffix"
                                >
                                  <span
                                    class="ant-input-data-count"
                                  >
                                    4 / 3000
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin-top: 12px;"
                  />
                  <form
                    class="ant-form ant-form-horizontal clearPaddingBottom css-1k7srz7"
                  >
                    <div
                      class="css-4t8s6h"
                    >
                      工单导出对象
                    </div>
                    <div
                      class="ant-form-item has-required-style css-1jlm9cy ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="dbService"
                            title=""
                          >
                            <div
                              class="label-cont-custom"
                            >
                              <span
                                class="custom-icon-ellipse css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <rect
                                    fill="#E8F3FF"
                                    height="16"
                                    rx="3"
                                    width="16"
                                  />
                                  <circle
                                    cx="8"
                                    cy="8"
                                    fill="#fff"
                                    r="3"
                                    stroke="#4583FF"
                                    stroke-width="2"
                                  />
                                </svg>
                              </span>
                              <span>
                                数据源
                              </span>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                aria-required="true"
                                class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="dbService_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="dbService_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="dbService_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="dbService"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-item"
                                    title="121"
                                  >
                                    121
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item has-required-style css-1jlm9cy"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="schema"
                            title=""
                          >
                            <div
                              class="label-cont-custom"
                            >
                              <span
                                class="custom-icon-ellipse css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <rect
                                    fill="#E8F3FF"
                                    height="16"
                                    rx="3"
                                    width="16"
                                  />
                                  <circle
                                    cx="8"
                                    cy="8"
                                    fill="#fff"
                                    r="3"
                                    stroke="#4583FF"
                                    stroke-width="2"
                                  />
                                </svg>
                              </span>
                              <span>
                                数据库
                              </span>
                            </div>
                          </label>
                        </div>
                        <div
                          class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                aria-required="true"
                                class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="schema_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="schema_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="schema_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="schema"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-placeholder"
                                  >
                                    请选择数据库
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                  <div
                    class="ant-divider ant-divider-horizontal"
                    role="separator"
                    style="margin-top: 0px;"
                  />
                  <form
                    class="ant-form ant-form-horizontal clearPaddingBottom css-18wzzee"
                  >
                    <div
                      class="css-4t8s6h"
                    >
                      导出方式
                    </div>
                    <div
                      class="ant-form-item css-15d6abf"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-no-colon"
                            for="exportMethod"
                            title=""
                          />
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-row actiontech-mode-switcher"
                                id="exportMethod"
                              >
                                <div
                                  class="ant-col ant-col-8"
                                >
                                  <div
                                    class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                                  >
                                    <span
                                      class="actiontech-mode-switcher-item-icon"
                                    >
                                      <svg
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      class="actiontech-mode-switcher-item-text"
                                    >
                                      输入SQL语句
                                    </span>
                                    <div
                                      class="active-icon-wrapper"
                                    >
                                      <span
                                        class="icon-mode-switcher-checked active-icon"
                                      >
                                        <svg
                                          fill="none"
                                          height="14"
                                          viewBox="0 0 14 14"
                                          width="14"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <g
                                            id="Frame"
                                          >
                                            <path
                                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                              id="Vector"
                                              stroke="#FCFBF9"
                                              stroke-linejoin="round"
                                              stroke-width="1.5"
                                            />
                                          </g>
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-15d6abf ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label ant-form-item-label-left"
                        >
                          <label
                            class="ant-form-item-required ant-form-item-no-colon"
                            for="sql"
                            title=""
                          />
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="custom-monaco-editor-wrapper css-1esok7i"
                              >
                                <input
                                  aria-required="true"
                                  class="custom-monaco-editor"
                                  height="400px"
                                  id="sql"
                                  language="sql"
                                  options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                                  value="select 1;"
                                  width="100%"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                  <div
                    class="css-zz3vgd"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-primary ant-btn-loading basic-button-wrapper css-1uxy5k6"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon ant-btn-loading-icon"
                          >
                            <span
                              aria-label="loading"
                              class="anticon anticon-loading anticon-spin"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="loading"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span>
                            审 核
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default ant-btn-loading basic-button-wrapper css-1uxy5k6"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon ant-btn-loading-icon"
                          >
                            <span
                              aria-label="loading"
                              class="anticon anticon-loading anticon-spin"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="loading"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span>
                            SQL美化
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <svg
                              color="#8A8F99"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                                fill="currentColor"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
